--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
             </form>
         </span>
         <span (click)="goMyProfile()">
-            <img id="my_user_profile" [src]="profile">
+            <img id="my_user_profile" [src]="profile_picture">
         </span>
         <span>
             <p>{{username}}</p>
