--- a/frontend/src/app/sidenav/sidenav.component.html
+++ b/frontend/src/app/sidenav/sidenav.component.html
@@ -3,12 +3,17 @@
     <a routerLink="follows" routerLinkActive="active-link"><span class="material-symbols-outlined">group</span> Followings</a>
     <a routerLinkActive="active-link" (click)="getNotifications()" [matMenuTriggerFor]="menu"><span  class="badge" matBadge="{{not_seen}}" matBadgeSize="medium" class="material-symbols-outlined">notifications</span> Notifications</a>
     <mat-menu class="x" #menu xPosition="after">
-        <div class="notifications" *ngFor="let noti of notifications">
-            <button (click)="seeing_redirect(noti.username, noti.id)" mat-menu-item>
-                <app-notification-card [noti]="noti"></app-notification-card>
-            </button>
+        <div *ngIf="notifications!=null; else elseBlock">
+            <div class="notifications" *ngFor="let noti of notifications">
+                <button (click)="seeing_redirect(noti.username, noti.id)" mat-menu-item>
+                    <app-notification-card [noti]="noti"></app-notification-card>
+                </button>
+            </div>
+            <button class="reload" *ngIf="final == false" (click)="reloadNotifications()">See more</button>
         </div>
-        <button class="reload" *ngIf="final == false" (click)="reloadNotifications()">See more</button>
+        <ng-template #elseBlock>
+            <p>You don´t have notifications</p>
+        </ng-template>
     </mat-menu>
     <a routerLink="edit_profile" routerLinkActive="active-link"><span class="material-symbols-outlined">edit_note</span> Edit Profile</a>
     <a routerLinkActive="active-link" (click)="logOut()"><span class="material-symbols-outlined">logout</span> Log out</a>
