--- a/frontend/src/app/create-post/create-post.component.html
+++ b/frontend/src/app/create-post/create-post.component.html
@@ -1,7 +1,10 @@
 <div class="post">
     <mat-card class="example-card">
         <mat-card-header>
-            <h2>Create new post</h2>
+            <h2 *ngIf="comment_id==undefined; else elseBlock">Create new post</h2>
+            <ng-template #elseBlock>
+                <h2>Create new comment</h2>
+            </ng-template>
         </mat-card-header>
         <mat-card-content>
             <form (ngSubmit)="submit()" [formGroup]="formPost">
