--- a/frontend/src/app/create-post/create-post.component.html
+++ b/frontend/src/app/create-post/create-post.component.html
@@ -11,7 +11,7 @@
                 <textarea placeholder="Write something here" rows="3" class="form-control" formControlName="post" required></textarea>
                 <br><br>
                 <div class="div_label_file">
-                    <label role="button" type="button" for="file" class="label_file">Choose files</label>
+                    <label tabindex="0" role="button" type="button" for="file" class="label_file">Choose files</label>
                 </div>
                 <input id="file" accept="image/*" type="file" (change)="fileEvent($event)" class="form-control" formControlName="post_file">
                 <img id="post_file" *ngIf="imagePreview && imagePreview !== ''" [src]="imagePreview">
