--- a/frontend/src/app/modal/modal.component.html
+++ b/frontend/src/app/modal/modal.component.html
@@ -1,1 +1,7 @@
-<p>modal works!</p>
+<h2 mat-dialog-title>{{ data.title }}</h2>
+<div mat-dialog-content>
+    <p>{{ data.message }}</p>
+</div>
+<div mat-dialog-actions>
+    <button mat-button (click)="close()">Cerrar</button>
+</div>
