--- a/frontend/src/app/user-card/user-card.component.html
+++ b/frontend/src/app/user-card/user-card.component.html
@@ -1,34 +1,34 @@
 <mat-card class="example-card">
     <mat-card-header>
         <div mat-card-avatar>
-            <img id="user_profile" [src]="profile_picture">
+            <img id="user_profile" [src]="this.user.profile_picture">
         </div>
         <mat-card-title>{{username}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <div class="grid">
-            <div *ngIf="firstName">
+            <div *ngIf="this.user.firstName">
                 <p>First Name</p>
-                <p>{{firstName}}</p>
+                <p>{{this.user.firstName}}</p>
             </div>
-            <div *ngIf="lastName">
+            <div *ngIf="this.user.lastName">
                 <p>Last Name</p>
-                <p>{{lastName}}</p>
+                <p>{{this.user.lastName}}</p>
             </div>
             <div>
                 <p>Followers</p>
-                <p>{{followers}}</p>
+                <p>{{this.user.followers}}</p>
             </div>
             <div>
                 <p>Followings</p>
-                <p>{{followings}}</p>
+                <p>{{this.user.followings}}</p>
             </div>
         </div>
         <div *ngIf="MyUser; else elseBlock" class="boton">
             <button class="buttonOk" (click)="goEditProfile()">Edit</button>
         </div>
         <ng-template #elseBlock>
-            <div *ngIf="Following == '0'; else elseBlock2" class="boton">
+            <div *ngIf="this.user.user_follow == '0'; else elseBlock2" class="boton">
                 <button class="buttonOk" (click)="follow()">Follow</button>
             </div>
             <ng-template #elseBlock2>
