--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <span class="example-spacer"></span>
         <span>
             <form class="example-form">
-                <input aria-label="State" (keyup.enter)="goToProfile()" [(ngModel)]="search_value" [matAutocomplete]="auto" [formControl]="myControl">
+                <input placeholder="Search" aria-label="State" (keyup.enter)="goToProfile()" [(ngModel)]="search_value" [matAutocomplete]="auto" [formControl]="myControl">
                 <mat-autocomplete #auto="matAutocomplete">
                     <mat-option (click)="goToProfile()" *ngFor="let user of filteredOptions | async" [value]="user.username">
                         <img id="user_profile" [src]="user.profile_picture">
