--- a/frontend/src/app/post-card/post-card.component.scss
+++ b/frontend/src/app/post-card/post-card.component.scss
@@ -34,11 +34,16 @@ mat-card{
             @include contentFont(16px);
         }
         button{
+            // margin-left: 5px;
+            // border: none;
+            // border-radius: 50%;
+            // cursor: pointer;
+            // height: 35px;
+
             margin-left: 5px;
             border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            height: 100%;
+            color: black;
+            box-shadow: none;
         }
     }
 }
