--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -11,6 +11,10 @@
     <app-post-final></app-post-final>
 </div>
 
+<div *ngIf="nada" class="final">
+    <app-post-cero [message]="message"></app-post-cero>
+</div>
+
 <!-- <div>
     <button (click)="reloadPosts()">Show more</button>
 </div> -->
