--- a/frontend/src/app/modal/modal.component.html
+++ b/frontend/src/app/modal/modal.component.html
@@ -1,7 +1,12 @@
-<h2 mat-dialog-title>{{ data.title }}</h2>
-<div mat-dialog-content>
-    <p>{{ data.message }}</p>
-</div>
-<div mat-dialog-actions>
-    <button mat-button (click)="close()">Cerrar</button>
+<div class="modal">
+    <h2>
+        <span class="material-symbols-outlined">error</span>Error
+    </h2>
+    <div>
+        <p>{{ data.message }}</p>
+    </div>
+    <div [ngClass]="{'grid1':action==null,'grid2':action!=null}">
+        <button class="buttonAction" *ngIf="action!=null" mat-button (click)="pressAction()">{{action}}</button>
+        <button class="buttonClose" mat-button (click)="close()">Close</button>
+    </div>
 </div>
