--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -1,21 +1,17 @@
 @import '../../../styles.scss';
 @import '../../../fonts.scss';
 
-// .container {
-//     background-color: white;
-//     align-content: center;
-//     margin: auto;
-//     width: 25%;
-//     border-radius: 10px;
+@media screen and (min-width: 900px) {
+    .login{
+        width: 30%;
+    }
+}
 
-//     margin: 0;
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     -ms-transform: translate(-50%, -50%);
-//     transform: translate(-50%, -50%);
-
-// }
+@media screen and (max-width: 900px) {
+    .login{
+        width: 90%;
+    }
+}
 
 .login {
     @include contentFont(16px);
@@ -24,7 +20,6 @@
     left: 50%;
     // -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    width: 30%;
 
     h2 {
         @include titleFont(25px);
