--- a/frontend/src/app/post-final/post-final.component.html
+++ b/frontend/src/app/post-final/post-final.component.html
@@ -3,3 +3,6 @@
         <button (click)="reloadPage()"><span class="material-symbols-outlined">refresh</span> Refresh page</button>
     </mat-card-content>
 </mat-card>
+<div class="button_mobile">
+    <button (click)="reloadPage()"><span class="material-symbols-outlined">refresh</span> Refresh page</button>
+</div>
