--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div *ngIf="inForm == false">
   <app-navbar></app-navbar>
 </div>
-<div class="space"></div>
+<div class="space_navbar"></div>
 <div class="grid">
   <router-outlet (activate)="onActivate($event)"></router-outlet>
   <div></div>
 </div>
 <div *ngIf="inForm == false">
   <app-sidenav></app-sidenav>
+  <div class="space_sidenav"></div>
+  <app-sidenav-mobile></app-sidenav-mobile>
 </div>
