--- a/frontend/src/app/edit-profile/edit-profile.component.scss
+++ b/frontend/src/app/edit-profile/edit-profile.component.scss
@@ -1,6 +1,45 @@
 @import '../../styles.scss';
 @import '../../fonts.scss';
 
+//Desktop format
+@media screen and (min-width: 900px) {
+    .grid1{
+        width: 80%;
+    }
+
+    .grid2{
+        width: 80%;
+    }
+
+    .div_label_file{
+        width: 30%;
+    }
+
+    button{
+        width: 60%;
+    }
+}
+
+//Mobile format
+@media screen and (max-width: 900px) {
+    .grid1{
+        width: 90%;
+    }
+
+    .grid2{
+        width: 90%;
+    }
+
+    .div_label_file{
+        width: 50%;
+    }
+
+    button{
+        width: 80%;
+    }
+}
+
+//Common
 .tab {
     @include contentFont(25px);
 
@@ -11,7 +50,6 @@
 
 .grid1 {
     margin: auto;
-    width: 80%;
     display: grid;
     grid-template-columns: auto;
 }
@@ -28,7 +66,6 @@
 
     .grid2 {
         margin: auto;
-        width: 80%;
         display: grid;
         grid-template-columns: auto auto;
         div{
@@ -53,24 +90,6 @@
     p{
         text-align: center;
     }
-
-    .div_label_file{
-        margin: auto;
-        text-align: center;
-        width: 30%;
-        // height: 25px;
-        // padding-top: 5px;
-        background-color: $secondaryDarkColor;
-        border-radius: 15px;
-        .label_file{
-            @include contentFont(16px);
-            cursor: pointer;
-        }
-    }
-
-    input[type="file"] {
-        display: none;
-    }
 }
 
 .profile_picture{
@@ -86,7 +105,6 @@
     .div_label_file{
         margin: auto;
         text-align: center;
-        width: 30%;
         // height: 25px;
         // padding-top: 5px;
         background-color: $secondaryDarkColor;
@@ -112,7 +130,6 @@
 
 button{
     margin: auto;
-    width: 60%;
     height: 40px;
     margin-top: 10px;
     margin-bottom: 10px;
